# Epitech_Tek1_2016

./: README.md
CPgrogElem/CPE_2016_getnextline/: get_next_line.c  (+1 more)
ProgSystemeUnix/PSU_2016_minishell1/: CMakeLists.txt  Makefile
ProgSystemeUnix/PSU_2016_minishell1/bonus/: Makefile
ProgSystemeUnix/PSU_2016_minishell1/bonus/include/: msg.h  pshell.h  strtowordtab.h
ProgSystemeUnix/PSU_2016_minishell1/bonus/srcs/: base.c  built_in.c  main.c  msg.c  pshellv2.c  shortcuts.c  strtowordtab.c
ProgSystemeUnix/PSU_2016_minishell1/bonus/utils/: mini_mouli_3.sh
ProgSystemeUnix/PSU_2016_minishell1/bonus/utils/Stress_Test/: test.c  test.sh
ProgSystemeUnix/PSU_2016_minishell1/bonus/v1.3_stable/: Makefile  test
ProgSystemeUnix/PSU_2016_minishell1/bonus/v1.3_stable/include/: base.h  errors.h  get_next_line.h  p_printf.h  setenv.h  shell1.h  strtowordtab.h
ProgSystemeUnix/PSU_2016_minishell1/bonus/v1.3_stable/srcs/: main.c
ProgSystemeUnix/PSU_2016_minishell1/include/: base.h  errors.h  get_next_line.h  msg.h  pshell.h  setenv.h  shell1.h
ProgSystemeUnix/PSU_2016_minishell1/srcs/: main.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/GNLgalagalarpz/: get_next_line.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/built_in/: built_in.c  built_inmatch.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/gnlrpz/: get_next_line.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/libfunk/: base.c  check_dir.c  error.c  string.c  strtowordtab.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/minishell1/: minishell1.c
ProgSystemeUnix/PSU_2016_minishell1/srcs/setenv/: env.c  env_inlist.c
(+151 files in other folders)
